# TextEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh-CN.md  cmake_build.bat  config.ini
.cursor/rules/: coding.mdc
docs/: CODE_STRUCTURE.md  FUNCTIONAL_REQUIREMENTS.md  FUNCTIONAL_TEST_SPEC.md  README.md  代码文件结构.md  功能测试规范.md  功能需求文档.md
include/: clipboard.h  config.h  dialog.h  display.h  document.h  editor.h  encoding.h  input.h  menu.h  regex_simple.h  search.h  syntax.h  types.h  utf8.h  util.h  viewport.h
src/: clipboard.c  config.c  dialog.c  display.c  document.c  editor.c  encoding.c  input.c  main.c  menu.c  regex_simple.c  search.c  syntax.c  utf8.c  util.c  viewport.c
src/platform/: platform.h  platform_dos.c  platform_nix.c  platform_win.c
syntax/: batch.ini  c.ini  css.ini  html.ini  javascript.ini  json.ini  markdown.ini  python.ini
tests/: test_clipboard.c  test_config.c  test_document.c  test_editor.c  test_encoding.c  test_runner.c  test_runner.h  test_search.c  test_syntax.c  test_utf8.c  test_util.c  test_viewport.c
tests/fixtures/: long_line.txt
tests/fixtures/syntax/: tst_syntax_test.ini
tests/mocks/: mock_display.c
